# my_AI_workspace

./: .gitignore  .gitmodules  AGENTS.md  CATALOG.md  LICENSE  README.md  registry.yaml
.opencode/: oh-my-opencode.jsonc  (+1 more)
nextme/: .gitignore  README.md  pyproject.toml
nextme/config/: advisors.yaml  integrations.yaml  scheduler.yaml  schedules.yaml
nextme/knowledge/areas/schedule/: weekly-routine.md
nextme/knowledge/templates/: note.md
nextme/src/advisors/career/: advisor.py  prompts.py
nextme/src/advisors/entrepreneurship/: advisor.py  prompts.py
nextme/src/advisors/family/: advisor.py  prompts.py
nextme/src/advisors/finance/: advisor.py  prompts.py
nextme/src/advisors/health/: advisor.py  prompts.py
nextme/src/advisors/learning/: advisor.py  prompts.py
nextme/src/advisors/legal/: advisor.py  prompts.py
nextme/src/agents/: base_advisor.py  chief_of_staff.py
nextme/src/api/: app.py  models.py
nextme/src/cli/: main.py
nextme/src/core/: config.py  context.py  cost_tracker.py  logging.py  memory.py  message.py  rag.py
nextme/src/integrations/: __init__.py
nextme/src/mcp/: server.py
nextme/src/scheduler/: __init__.py  quiet_hours.py  reminder_store.py  scheduler.py
nextme/tests/: conftest.py
nextme/tests/eval/: eval_runner.py  rubrics.py  test_evals.py
nextme/tests/integration/: test_integrations.py  test_memory.py  test_rag_pipeline.py
nextme/tests/unit/: test_advisors.py  test_api.py  test_base_advisor.py  test_cost_tracker.py  test_integrations.py  test_memory.py  test_message.py  test_rag.py  test_routing.py  test_scheduler.py
(+81 files in other folders)
